<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_assign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <!--tools:context="application.snap.assign"-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="32dp">

            <TextView
                android:text="@string/driver_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driver_title"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="100dp"
                android:gravity="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/selectDriver"
                android:layout_width="wrap_content"
                android:layout_height="106dp" >

                <RadioButton
                    android:id="@+id/Driver1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Driver1"
                    />

                <RadioButton
                    android:id="@+id/Driver2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Driver2" />

                <RadioButton
                    android:id="@+id/Driver3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Driver3"
                    android:checked="true"/>

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_weight="0.40">

            <Button
                android:text="@string/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Continue_to_list"
                android:layout_weight="1"
                android:layout_marginLeft="70dp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
